add education section

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+- degree: Machine learning Micro degree  
+  uni: Edx
+  year: April, 2016
+  # awards: Best Project award
+  # summary: Top 3 projects in the class
